<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/shiftCreator"
    tools:context=".ui.editor.ShiftCreatorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/shift_creator_title"
            app:navigationIcon="@drawable/ic_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                style="@style/Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_columnSpan="2"
                android:text="@string/shift_creator_shift_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_shift_name" />

            <EditText
                android:id="@+id/shiftNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                app:layout_gravity="center"
                android:hint="@string/shift_creator_shift_name_hint"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/shift_creator_short_name" />

                <de.nulide.shiftcal.ui.helper.InfoView
                    android:id="@+id/shortNameInfoView"
                    android:paddingHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:balloonText="@string/shift_creator_short_name_info_tooltip"
                    android:layout_gravity="center" />

            </LinearLayout>

            <EditText
                android:id="@+id/shortShiftNameEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:autofillHints=""
                android:hint="@string/shift_creator_short_name_hint"
                app:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                app:layout_columnSpan="2"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_columnSpan="2"
                android:text="@string/shift_creator_time_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_start_time" />

            <LinearLayout
                android:layout_width="wrap_content"
                app:layout_gravity="center"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/startTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:layout_gravity="center"
                    android:text="08:00"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0"
                    android:text="@string/shift_creator_next_day_label" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_end_time" />

            <LinearLayout
                android:layout_width="wrap_content"
                app:layout_gravity="center"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/endTimeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:padding="4dp"
                    app:layout_gravity="center"
                    android:ems="5"
                    android:text="16:00"
                    tools:ignore="HardcodedText" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_end_day_offset" />

            <RadioGroup
                android:id="@+id/endDayOffsetGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/endSameDayOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift_creator_end_day_same_day" />

                <RadioButton
                    android:id="@+id/endNextDayOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/shift_creator_end_day_next_day" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_duration_label" />

            <TextView
                android:id="@+id/durationValueText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAlignment="center"
                tools:text="25:00 h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_balance_preview_label" />

            <TextView
                android:id="@+id/balancePreviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textStyle="bold"
                tools:text="-8:00 h" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_break_time" />

            <EditText
                android:id="@+id/breakMinutesEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                app:layout_gravity="center"
                android:textAlignment="center"
                android:inputType="numberDecimal"
                android:ems="10"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_balance_type" />

            <RadioGroup
                android:id="@+id/balanceTypeGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/balanceDefaultOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shift_creator_balance_default" />

                <RadioButton
                    android:id="@+id/balancePositiveOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/shift_creator_balance_positive" />

                <RadioButton
                    android:id="@+id/balanceNegativeOption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/shift_creator_balance_negative" />
            </RadioGroup>

            <TextView
                android:id="@+id/balanceInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:layout_marginHorizontal="4dp"
                app:layout_columnSpan="2"
                android:text="@string/shift_creator_balance_info"
                android:textAlignment="center"
                android:textColor="@color/textColorWaterMark"
                android:visibility="gone" />

            <TextView
                android:id="@+id/balanceHoursLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_balance_hours" />

            <EditText
                android:id="@+id/balanceHoursEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/work_day_details_hours_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:visibility="gone" />

            <TextView
                android:id="@+id/balanceMinutesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_balance_minutes"
                android:visibility="gone" />

            <EditText
                android:id="@+id/balanceMinutesEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/work_day_details_minutes_hint"
                android:inputType="number"
                android:textAlignment="center"
                android:visibility="gone" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="8dp"
                app:layout_columnSpan="2"
                android:background="?android:attr/listDivider" />

            <TextView
                style="@style/Text.SectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_columnSpan="2"
                android:text="@string/shift_creator_advanced_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:text="@string/shift_creator_color" />

            <Button
                android:id="@+id/colorPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                app:layout_gravity="center"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="#"
                tools:ignore="HardcodedText" />


        </androidx.gridlayout.widget.GridLayout>

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDoneShift"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/done"
        app:srcCompat="@drawable/ic_done" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
