<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
            android:text="@string/welcome_info_title" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:layout_marginVertical="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/welcome_info_description" />

        <Button
            android:id="@+id/welcomeIntroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/welcome_info_start_button" />

    </LinearLayout>

</ScrollView>